[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipathelper"
version = "2.0.3"
description = "PythonでIPATに投票する際に利用可能なモジュール"
readme = "README.rst"
authors = [
    {name = "Mikimini9627"}
]
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/Mikimini9627/ipathelper"
Repository = "https://github.com/Mikimini9627/ipathelper"

# ---------------------------------------------------------------
# wheel ビルド設定
# ---------------------------------------------------------------
[tool.hatch.build.targets.wheel]
# パッケージディレクトリを指定
packages = ["ipathelper"]

# DLL をパッケージデータとして含める
# キー: ソースパス  値: wheel 内のパス
[tool.hatch.build.targets.wheel.force-include]
"ipathelper/x64/IpatHelper.dll" = "ipathelper/x64/IpatHelper.dll"
"ipathelper/x86/IpatHelper.dll" = "ipathelper/x86/IpatHelper.dll"

# sdist にも DLL を含める
[tool.hatch.build.targets.sdist]
include = [
    "ipathelper/**",
    "README.rst",
    "LICENSE",
]
